--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <p>seu policia é que eu separei recentemente, de paixão eu to doente, será que o semhor me entende</p>
 
     <img src="img/bicho.webp" alt="" srcset="" height="440">
-
+<img src="img/negao.jpg" alt="" srcset="" height="440">
 </body>
 
 </html>
