--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
     <img src="img/bicho.webp" alt="" srcset="" height="440">
 <img src="img/negao.jpg" alt="" srcset="" height="440">
+<img src="img/maracuja-412x309.jpg" alt="" srcset="" height="440">
 </body>
 
 </html>
